# falkordb-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  codecov.yml  deny.toml
.github/: copilot-instructions.md  wordlist.txt
.github/workflows/: codeql.yml  coverage.yml  main.yml  pr-checks.yml  spellcheck.yml
docs/: upstream-falkordb-rs.md
scripts/: post-checks.sh
src/: backend.rs  config.rs  falkor.rs  lib.rs  main.rs  server.rs
tests/: live_integration.rs  mcp_protocol.rs
